@@ -5,6 +5,7 @@
 	  [!PREFER_MPZ_MUL]: use integer multiplication for scaling, as this
 	  has proven to be a bit faster than multiplication on pre-calculated mpz
 	* numeric.c (cob_cmp_packed): optimized for speed
+	* intrinsic.c (at_cr_or_db): fixed to do case-insensitive check
 
 2023-01-17  Simon Sobisch <simonsobisch@gnu.org>
 
